:books: added documentation for request of create new user
